# nsyc-fetch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yaml
_docs/: DOCUMENTATION.md  EXECPLAN_event_hierarchy.md  EXECPLAN_logging_and_extraction_improvements.md  EXECPLAN_per_page_extraction_and_lifecycle.md  execplan-hybrid-event-id.md
src/nsyc_fetch/: __init__.py  extractor.py  fetcher.py  logger.py  main.py  models.py
